force-app/main/default/objects/Case/fields/ApprovalRequested__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequested__c</fullName>
    <description>Date the approval was requested (is fopr COLLECTIONS but can be used in any approval process)</description>
    <label>Approval Requested</label>
    <type>DateTime</type>
</CustomField>