force-app/main/default/objects/Case/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>