force-app/main/default/objects/Case/fields/ArrangeCollection__c.field-meta.xml
<CustomField>
    <fullName>ArrangeCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arrange the collection of the defective goods</description>
    <label>Arrange Collection</label>
    <type>Checkbox</type>
</CustomField>