force-app/main/default/objects/Case/fields/Attach_SKU_photos_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Attach_SKU_photos_email_sent__c</fullName>
    <label>Attach SKU photos email sent</label>
    <type>DateTime</type>
</CustomField>