force-app/main/default/objects/Case/fields/Case_problem_id__c.field-meta.xml
<CustomField>
    <fullName>Case_problem_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child record generated to enable creting multiple problems to a case</description>
    <label>Case problem id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>