force-app/main/default/objects/Case/fields/Case_Stopped__c.field-meta.xml
<CustomField>
    <fullName>Case_Stopped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Stopped</label>
    <type>Checkbox</type>
</CustomField>