force-app/main/default/objects/Case/fields/CollectDefectiveProducts__c.field-meta.xml
<CustomField>
    <fullName>CollectDefectiveProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether defective products associated with a customer claim need to be collected. When set to true, it signifies that arrangements should be made to retrieve the products from the customer for further inspection or processing.</description>
    <label>Collect Defective Products</label>
    <type>Checkbox</type>
</CustomField>