force-app/main/default/objects/Case/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <description>Date agreed with the customer for the collection of goods</description>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>