force-app/main/default/objects/Case/fields/CollectionOrderId__c.field-meta.xml
<CustomField>
    <fullName>CollectionOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order created to manage the collection of a custoemr return</description>
    <label>Collection Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases (Collection Order)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>