force-app/main/default/objects/Case/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <description>Compensation to pay to a customer</description>
    <label>Settlement Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>