force-app/main/default/objects/Case/fields/CompensationOrderId__c.field-meta.xml
<CustomField>
    <fullName>CompensationOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compensation Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases (Compensation Order)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>