force-app/main/default/objects/Case/fields/ContactPointAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case address (related to a contact point address)</description>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>