force-app/main/default/objects/Case/fields/CreditRequired__c.field-meta.xml
<CustomField>
    <fullName>CreditRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to instruct accounts to raise a credit note to the customer</description>
    <inlineHelpText>Check this field to instruct accounts to raise a credit note to the customer</inlineHelpText>
    <label>Credit Note required?</label>
    <type>Checkbox</type>
</CustomField>