force-app/main/default/objects/Case/fields/Customer_agrees_with_the_solution__c.field-meta.xml
<CustomField>
    <fullName>Customer_agrees_with_the_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer agrees with the solution</label>
    <type>Checkbox</type>
</CustomField>