force-app/main/default/objects/Case/fields/Customer_no_ok_service_cause__c.field-meta.xml
<CustomField>
    <fullName>Customer_no_ok_service_cause__c</fullName>
    <label>Customer no ok service cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect solution</fullName>
            </value>
            <value>
                <fullName>Agent did not appeared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>