force-app/main/default/objects/Case/fields/Customer_service_conclusion__c.field-meta.xml
<CustomField>
    <fullName>Customer_service_conclusion__c</fullName>
    <label>Customer service conclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>No ok</fullName>
            </value>
            <value>
                <fullName>Ok but unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>