force-app/main/default/objects/Case/fields/CustomerAgreed__c.field-meta.xml
<CustomField>
    <fullName>CustomerAgreed__c</fullName>
    <description>Date of the customer agreement to the proposal sent</description>
    <label>Customer Agreed</label>
    <type>Date</type>
</CustomField>