force-app/main/default/objects/Case/fields/CustomerReturns__c.field-meta.xml
<CustomField>
    <fullName>CustomerReturns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the customer will return the goods to them warehouse</description>
    <inlineHelpText>Check this if the customer is returning the goods himselt to the warehouse</inlineHelpText>
    <label>Customer will return the goods</label>
    <type>Checkbox</type>
</CustomField>