force-app/main/default/objects/Case/fields/Date_case_form_link_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_case_form_link_email_sent__c</fullName>
    <label>Date case form link email sent</label>
    <type>DateTime</type>
</CustomField>