force-app/main/default/objects/Case/fields/Date_invoices_lines_identified__c.field-meta.xml
<CustomField>
    <fullName>Date_invoices_lines_identified__c</fullName>
    <description>Date when the reporter identified the invoices lines in the site</description>
    <label>Date invoices lines identified</label>
    <type>DateTime</type>
</CustomField>