force-app/main/default/objects/Case/fields/Date_last_status_change__c.field-meta.xml
<CustomField>
    <fullName>Date_last_status_change__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Date last status change</label>
    <type>DateTime</type>
</CustomField>