force-app/main/default/objects/Case/fields/Date_order_generated__c.field-meta.xml
<CustomField>
    <fullName>Date_order_generated__c</fullName>
    <label>Date order generated</label>
    <type>DateTime</type>
</CustomField>