force-app/main/default/objects/Case/fields/Date_Photos_attached__c.field-meta.xml
<CustomField>
    <fullName>Date_Photos_attached__c</fullName>
    <label>Date Photos attached</label>
    <type>DateTime</type>
</CustomField>