force-app/main/default/objects/Case/fields/Date_reporter_called_to_attach_photos__c.field-meta.xml
<CustomField>
    <fullName>Date_reporter_called_to_attach_photos__c</fullName>
    <label>Date reporter called to attach photos</label>
    <type>DateTime</type>
</CustomField>