force-app/main/default/objects/Case/fields/Date_reporter_filled_the_form__c.field-meta.xml
<CustomField>
    <fullName>Date_reporter_filled_the_form__c</fullName>
    <label>Date reporter filled the form</label>
    <type>DateTime</type>
</CustomField>