force-app/main/default/objects/Case/fields/Date_technician_contact_to_call_customer__c.field-meta.xml
<CustomField>
    <fullName>Date_technician_contact_to_call_customer__c</fullName>
    <label>Date technician contact to call customer</label>
    <type>DateTime</type>
</CustomField>