force-app/main/default/objects/Case/fields/Delivery_done__c.field-meta.xml
<CustomField>
    <fullName>Delivery_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery done</label>
    <type>Checkbox</type>
</CustomField>