force-app/main/default/objects/Case/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <description>SAP Distribution Channel</description>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>