force-app/main/default/objects/Case/fields/f_SAPRefInvoice__c.field-meta.xml
<CustomField>
    <fullName>f_SAPRefInvoice__c</fullName>
    <formula>IF(
    ISBLANK(SAPInvoice__c),
    &quot;&quot;,
    SAPInvoice__c &amp; &quot;-&quot; &amp;   TEXT(SAPInvoiceLine__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Ref. Invoice</label>
    <type>Text</type>
</CustomField>