force-app/main/default/objects/Case/fields/FactoryInquiry__c.field-meta.xml
<CustomField>
    <fullName>FactoryInquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the claim requires the factory advice</description>
    <label>Factory Inquiry</label>
    <type>Checkbox</type>
</CustomField>