force-app/main/default/objects/Case/fields/FactoryInquiryComments__c.field-meta.xml
<CustomField>
    <fullName>FactoryInquiryComments__c</fullName>
    <label>Factory Inquiry Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>