force-app/main/default/objects/Case/fields/FactoryInquiryContact__c.field-meta.xml
<CustomField>
    <fullName>FactoryInquiryContact__c</fullName>
    <label>Factory Inquiry Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUTECH</fullName>
            </value>
            <value>
                <fullName>gustavo.escrig@butech.es</fullName>
                <isActive>false</isActive>
                <label>BUTECH - gustavo.escrig@butech.es</label>
            </value>
            <value>
                <fullName>GAMA</fullName>
                <label>GAMA DECOR</label>
            </value>
            <value>
                <fullName>GAMA DECOR (aftersales1@gama-decor.com)</fullName>
                <isActive>false</isActive>
                <label>GAMA DECOR (aftersales1@gama-decor.com)</label>
            </value>
            <value>
                <fullName>aftersales1@gama-decor.com</fullName>
                <isActive>false</isActive>
                <label>GAMA DECOR - aftersales1@gama-decor.com</label>
            </value>
            <value>
                <fullName>KRION</fullName>
            </value>
            <value>
                <fullName>KRION (stecnico2@krion.com)</fullName>
                <isActive>false</isActive>
                <label>KRION (stecnico2@krion.com)</label>
            </value>
            <value>
                <fullName>stecnico2@krion.com</fullName>
                <isActive>false</isActive>
                <label>KRION - stecnico2@krion.com</label>
            </value>
            <value>
                <fullName>LANTIC</fullName>
                <label>L&apos;ANTIC</label>
            </value>
            <value>
                <fullName>L’ANTIC (sat@anticcolonial.com)</fullName>
                <isActive>false</isActive>
                <label>L’ANTIC (sat@anticcolonial.com)</label>
            </value>
            <value>
                <fullName>sat@anticcolonial.com</fullName>
                <isActive>false</isActive>
                <label>L’ANTIC - sat@anticcolonial.com</label>
            </value>
            <value>
                <fullName>NOKEN</fullName>
            </value>
            <value>
                <fullName>NOKEN (sat.1@noken.com)</fullName>
                <isActive>false</isActive>
                <label>NOKEN (sat.1@noken.com)</label>
            </value>
            <value>
                <fullName>sat.1@noken.com</fullName>
                <isActive>false</isActive>
                <label>NOKEN - sat.1@noken.com</label>
            </value>
            <value>
                <fullName>PORSA</fullName>
                <label>PORCELANOSA</label>
            </value>
            <value>
                <fullName>PORCELANOSA (export-uk@porcelanosa.com)</fullName>
                <isActive>false</isActive>
                <label>PORCELANOSA (export-uk@porcelanosa.com)</label>
            </value>
            <value>
                <fullName>export-uk@porcelanosa.com</fullName>
                <isActive>false</isActive>
                <label>PORCELANOSA - export-uk@porcelanosa.com</label>
            </value>
            <value>
                <fullName>XTONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>