force-app/main/default/objects/Case/fields/FactoryInquiryDate__c.field-meta.xml
<CustomField>
    <fullName>FactoryInquiryDate__c</fullName>
    <label>Factory Inquiry Date</label>
    <type>Date</type>
</CustomField>