force-app/main/default/objects/Case/fields/FactoryInquiryResponse__c.field-meta.xml
<CustomField>
    <fullName>FactoryInquiryResponse__c</fullName>
    <label>Factory Response</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>