force-app/main/default/objects/Case/fields/FactoryInvoice__c.field-meta.xml
<CustomField>
    <fullName>FactoryInvoice__c</fullName>
    <description>Factory invoice number for the sale of the claimed product to the factory.</description>
    <inlineHelpText>Factory invoice number for the sale of the claimed product to the factory.</inlineHelpText>
    <label>Factory Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>