force-app/main/default/objects/Case/fields/GoodsChecked__c.field-meta.xml
<CustomField>
    <fullName>GoodsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TIck this box when the returned goods have been checked and they are in good condition</inlineHelpText>
    <label>Goods Checked</label>
    <type>Checkbox</type>
</CustomField>