force-app/main/default/objects/Case/fields/HasChildCases__c.field-meta.xml
<CustomField>
    <fullName>HasChildCases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasChildCases</label>
    <type>Checkbox</type>
</CustomField>