force-app/main/default/objects/Case/fields/HasCompensation__c.field-meta.xml
<CustomField>
    <fullName>HasCompensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasCompensation</label>
    <type>Checkbox</type>
</CustomField>