force-app/main/default/objects/Case/fields/Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_number__c</fullName>
    <label>Invoice number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>