force-app/main/default/objects/Case/fields/IsClaim__c.field-meta.xml
<CustomField>
    <fullName>IsClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si es un Claim</description>
    <label>Is Claim</label>
    <type>Checkbox</type>
</CustomField>