force-app/main/default/objects/Case/fields/IsCollection__c.field-meta.xml
<CustomField>
    <fullName>IsCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Collection?</label>
    <type>Checkbox</type>
</CustomField>