force-app/main/default/objects/Case/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G1</fullName>
                <label>Factory Liability.</label>
            </value>
            <value>
                <fullName>G2</fullName>
                <label>Region Liability.</label>
            </value>
            <value>
                <fullName>G3</fullName>
                <label>Customer Liability.</label>
            </value>
            <value>
                <fullName>Company Liability</fullName>
                <isActive>false</isActive>
                <label>Company Liability</label>
            </value>
            <value>
                <fullName>Factory Liability</fullName>
                <isActive>false</isActive>
                <label>Factory Liability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>