force-app/main/default/objects/Case/fields/LikelyCause__c.field-meta.xml
<CustomField>
    <fullName>LikelyCause__c</fullName>
    <label>Likely Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SymptomsDetails__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CartridgeNotAdjusted</fullName>
                <isActive>false</isActive>
                <label>CartridgeNotAdjusted</label>
            </value>
            <value>
                <fullName>CloggedAerator</fullName>
                <isActive>false</isActive>
                <label>CloggedAerator</label>
            </value>
            <value>
                <fullName>COMPANY LIABILITY</fullName>
            </value>
            <value>
                <fullName>CrackedToiletSeat</fullName>
                <isActive>false</isActive>
                <label>CrackedToiletSeat</label>
            </value>
            <value>
                <fullName>CUSTOMER ISSUE</fullName>
            </value>
            <value>
                <fullName>Customer misplaced/Item not in original package</fullName>
                <isActive>false</isActive>
                <label>Customer misplaced/Item not in original package</label>
            </value>
            <value>
                <fullName>CUSTOMER MIS-USE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER MIS-USE (1)</fullName>
            </value>
            <value>
                <fullName>CUSTOMER MIS-USE (2)</fullName>
            </value>
            <value>
                <fullName>CUSTOMER MIS-USE (3)</fullName>
            </value>
            <value>
                <fullName>DamagedCartridge-F</fullName>
                <isActive>false</isActive>
                <label>DamagedCartridge-F</label>
            </value>
            <value>
                <fullName>DamagedCartridge-PB</fullName>
                <isActive>false</isActive>
                <label>DamagedCartridge-PB</label>
            </value>
            <value>
                <fullName>DamagedCartridge-T</fullName>
                <isActive>false</isActive>
                <label>DamagedCartridge-T</label>
            </value>
            <value>
                <fullName>DamagedCartridge-TF</fullName>
                <isActive>false</isActive>
                <label>DamagedCartridge-TF</label>
            </value>
            <value>
                <fullName>DamagedFillingValve</fullName>
                <isActive>false</isActive>
                <label>DamagedFillingValve</label>
            </value>
            <value>
                <fullName>DamagedFlushValve</fullName>
                <isActive>false</isActive>
                <label>DamagedFlushValve</label>
            </value>
            <value>
                <fullName>DAMAGED IN TRANSIT / ON SITE</fullName>
            </value>
            <value>
                <fullName>DAMAGED IN TRANSPORT</fullName>
            </value>
            <value>
                <fullName>DiverterCartridgeDamaged</fullName>
                <isActive>false</isActive>
                <label>DiverterCartridgeDamaged</label>
            </value>
            <value>
                <fullName>DiverterDamaged/</fullName>
                <isActive>false</isActive>
                <label>DiverterDamaged/</label>
            </value>
            <value>
                <fullName>FlushButtonsNotAdjusted</fullName>
                <isActive>false</isActive>
                <label>FlushButtonsNotAdjusted</label>
            </value>
            <value>
                <fullName>GROUT HAS NOT BEEN MIXED CORRECTLY - TOO MUCH WATER</fullName>
            </value>
            <value>
                <fullName>HotFeedingColdSupply line</fullName>
                <isActive>false</isActive>
                <label>HotFeedingColdSupply line</label>
            </value>
            <value>
                <fullName>IMPROPER CLEANING OR MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>IMPROPER CLEANING OR MAINTENANCE (1)</fullName>
            </value>
            <value>
                <fullName>INSTALLATION ISSUE</fullName>
            </value>
            <value>
                <fullName>INSTALLATION ISSUE (1)</fullName>
            </value>
            <value>
                <fullName>INSTALLATION ISSUE (10)</fullName>
            </value>
            <value>
                <fullName>INSTALLATION ISSUE (11)</fullName>
            </value>
            <value>
                <fullName>INSTALLATION ISSUE (12)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>