force-app/main/default/objects/Case/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case related order (main)</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>