force-app/main/default/objects/Case/fields/Other_problem__c.field-meta.xml
<CustomField>
    <fullName>Other_problem__c</fullName>
    <label>Other problem</label>
    <type>TextArea</type>
</CustomField>