force-app/main/default/objects/Case/fields/Other_qualification__c.field-meta.xml
<CustomField>
    <fullName>Other_qualification__c</fullName>
    <label>Other qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>