force-app/main/default/objects/Case/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <description>Plant shipping the damaged/returned goods</description>
    <label>Plant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>