force-app/main/default/objects/Case/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Reported Problem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DETERIORATED</fullName>
                <label>Product deteriorated over time</label>
            </value>
            <value>
                <fullName>NOT-WORKING</fullName>
                <label>Product malfunctioning</label>
            </value>
            <value>
                <fullName>WRONG-PRODUCT</fullName>
                <label>Product mismatch</label>
            </value>
            <value>
                <fullName>BROKEN</fullName>
                <label>Product received damaged or broken</label>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
                <label>Product incomplete: parts missing</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>Other problems</label>
            </value>
            <value>
                <fullName>RETURN</fullName>
                <label>Customer Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>