force-app/main/default/objects/Case/fields/ProblemDescription__c.field-meta.xml
<CustomField>
    <fullName>ProblemDescription__c</fullName>
    <description>Description of the problem</description>
    <label>Problem Description</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>