force-app/main/default/objects/Case/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Product family</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReportedMakeProblem__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACC</fullName>
                <label>ACCESSORIES</label>
            </value>
            <value>
                <fullName>ADH</fullName>
                <label>ADHESIVES</label>
            </value>
            <value>
                <fullName>ALL</fullName>
                <label>ALL FAMILIES</label>
            </value>
            <value>
                <fullName>AllProducts1</fullName>
                <isActive>false</isActive>
                <label>AllProducts1</label>
            </value>
            <value>
                <fullName>AllProducts2</fullName>
                <isActive>false</isActive>
                <label>AllProducts2</label>
            </value>
            <value>
                <fullName>AllProducts3</fullName>
                <isActive>false</isActive>
                <label>AllProducts3</label>
            </value>
            <value>
                <fullName>AllProductsPD</fullName>
                <isActive>false</isActive>
                <label>AllProductsPD</label>
            </value>
            <value>
                <fullName>AllProductsPI</fullName>
                <isActive>false</isActive>
                <label>AllProductsPI</label>
            </value>
            <value>
                <fullName>AllProductsPM</fullName>
                <isActive>false</isActive>
                <label>AllProductsPM</label>
            </value>
            <value>
                <fullName>BAS</fullName>
                <label>BASINS</label>
            </value>
            <value>
                <fullName>BathKitchenFaucet</fullName>
                <isActive>false</isActive>
                <label>BathKitchenFaucet</label>
            </value>
            <value>
                <fullName>FUR</fullName>
                <label>BATHROOM FURNITURE</label>
            </value>
            <value>
                <fullName>TUB</fullName>
                <label>BATHTUBS</label>
            </value>
            <value>
                <fullName>BRW</fullName>
                <label>BRASSWARE</label>
            </value>
            <value>
                <fullName>FloorMountedToilets</fullName>
                <isActive>false</isActive>
                <label>FloorMountedToilets</label>
            </value>
            <value>
                <fullName>FreeStandingTubFiller</fullName>
                <isActive>false</isActive>
                <label>FreeStandingTubFiller</label>
            </value>
            <value>
                <fullName>GRO</fullName>
                <label>GROUTS</label>
            </value>
            <value>
                <fullName>INS</fullName>
                <label>INSTALLATION SYSTEMS</label>
            </value>
            <value>
                <fullName>MIR</fullName>
                <label>MIRRORS</label>
            </value>
            <value>
                <fullName>OtherProducts</fullName>
                <isActive>false</isActive>
                <label>OtherProducts</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>OTHERS</label>
            </value>
            <value>
                <fullName>PressureBalance</fullName>
                <isActive>false</isActive>
                <label>PressureBalance</label>
            </value>
            <value>
                <fullName>PressureBalanceWithDiverter</fullName>
                <isActive>false</isActive>
                <label>PressureBalanceWithDiverter</label>
            </value>
            <value>
                <fullName>SAW</fullName>
                <label>SANITARYWARE</label>
            </value>
            <value>
                <fullName>SHC</fullName>
                <label>SHOWER COLUMNS</label>
            </value>
            <value>
                <fullName>SHE</fullName>
                <label>SHOWER ENCLOSURES</label>
            </value>
            <value>
                <fullName>SHH</fullName>
                <label>SHOWER HEADS</label>
            </value>
            <value>
                <fullName>SHT</fullName>
                <label>SHOWER TRAYS</label>
            </value>
            <value>
                <fullName>SHV</fullName>
                <label>SHOWER VALVES</label>
            </value>
            <value>
                <fullName>ThermostaticValve</fullName>
                <isActive>false</isActive>
                <label>ThermostaticValve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>