force-app/main/default/objects/Case/fields/ProposalDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDate__c</fullName>
    <description>Date the proposal has been presented to the customer</description>
    <label>Solution Proposal Date</label>
    <type>Date</type>
</CustomField>